# NucleoFind-WebApp

./: .gitignore
backend/: CMakeLists.txt  README.md  build.sh
backend/gemmi/: CMakeLists.txt
backend/src/: nucleofind-backend.cpp  nucleofind-backend.h  nucleofind-bindings.cpp
frontend/: eslint.config.js  index.html  old_index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/checkout/package/public/: CootWorker.js  moorhen.js  moorhen64.js
frontend/public/: serviceWorker.js
frontend/public/baby-gru/: flatly.css
frontend/src/: App.tsx  index.css
frontend/src/components/: FileUpload.tsx  Loader.tsx  MapButton.tsx  MoorhenBox.tsx  UploadBox.tsx
frontend/src/interface/: enum.d.ts  enum.ts  types.d.ts  types.ts
frontend/src/workers/: inferenceWorker.ts
frontend/wasm/: nucleofind.js  nucleofind.wasm
python/: test_data.py
